Backend updates: security fixes, user features, CORS config, cleanup